package com.github.domain;
public interface Room {
    public void intialize(PartyServiceTest partyService);
    
}
