@startuml Intereact with Inn
skinparam Style strictuml
skinparam SequenceMessageAlignment center



abstract class Room{
    #_battleChance: float 
    #_roomCounter: int
    + getBattleChance(): float
    + setBattleChance(percent: float): void
    + getRoomCounter(): int
    + increaseRoomCounter(): void
    + nextRoom(): Room
} 
class Inn {

    +recover(): void
    +buy(id: int): Item
    +recruit(id: int): Hero
}
class BattleRoom{
}
class Spawn{

}

Room <|-- Inn
Room <|-- BattleRoom
Room <|-- Spawn
@enduml